front: inputgroupsncf: fix overflow
- add right 0 in scss file

--- a/front/src/common/BootstrapSNCF/InputGroupSNCF.scss
+++ b/front/src/common/BootstrapSNCF/InputGroupSNCF.scss
@@ -1,14 +1,14 @@
 .input-group-sm {
   button {
     height: 1.875rem;
-    font-size: .875rem;
-    padding: .125rem 1.5rem;
+    font-size: 0.875rem;
+    padding: 0.125rem 1.5rem;
   }
   .form-control-container {
     height: 1.875rem;
     input.form-control {
       min-height: auto;
-      font-size: .875rem;
+      font-size: 0.875rem;
     }
   }
 }
@@ -20,4 +20,8 @@
 }
 .dropdown-item {
   cursor: pointer;
+}
+
+.osrd-dropdown-sncf {
+  right: 0 !important;
 }
